<resources>
    <string name="app_name">GRO</string>
    <string name="fragment_compay_label">Empresas</string>
    <string name="fragment_compay_create_label">Criar empresa</string>
    <string name="fragment_compay_edit_label">Editar empresa</string>
    <string name="fragment_ambient_label">Ambientes</string>
    <string name="fragment_ambient_detail_label">Detalhes do ambiente</string>
    <string name="fragment_ambient_create_label">Criar ambiente</string>
    <string name="fragment_ambient_edit_label">Editar ambiente</string>
    <string name="fragment_departament_label">Setores</string>
    <string name="fragment_departament_create_label">Criar setor</string>
    <string name="fragment_departament_edit_label">Editar setor</string>
    <string name="fragment_function_label">Funções</string>
    <string name="fragment_function_create_label">Criar função</string>
    <string name="fragment_function_edit_label">Editar função</string>
    <string name="fragment_risk_create_label">Criar risco</string>
    <string name="fragment_risk_edit_label">Editar risco</string>
    <string name="fragment_risk_label">Riscos</string>
    <string name="fragment_export_select_company_label">Exportar relatório</string>
    <string name="fragment_export_send_report_label">Enviar relatório</string>
    <string name="fragment_workday">Jornada de trabalho</string>
    <string name="fragment_user">Criar usuário</string>
    <string name="fragment_user_update">Alterar senha</string>
    <string name="fragment_auth">Login</string>
    <string name="fragment_settings">Configurações</string>
    <string name="fragment_forgot_password">Recuperar senha</string>
    <string name="fragment_billing">Planos de pagamento</string>
    <string name="fragment_access_key">Chave de acesso</string>
    <string name="action_edit">Editar</string>
    <string name="action_delete">Excluir</string>
    <string name="action_duplicate">Duplicar</string>
    <string name="action_move">Mover</string>
    <string name="action_export">Exportar</string>
    <string name="action_sync">Sincronizar</string>
    <string name="action_access_key">Chave de acesso</string>
    <string name="action_settings">Configuração</string>
    <string name="action_change_password">Alterar senha</string>
    <string name="action_logout">Sair</string>
    <string name="action_save">Salvar</string>
    <string name="action_send">Enviar</string>
    <string name="action_send_again">Tentar novamente</string>
    <string name="action_finish">Finalizar</string>
    <string name="action_cancel">Cancelar</string>
    <string name="action_ok">OK</string>
    <string name="action_confirm">Confirmar</string>
    <string name="action_add">Adicionar</string>
    <string name="action_login">Entrar</string>
    <string name="action_register">Cadastrar</string>
    <string name="action_contract">Contratar</string>
    <string name="action_change">Alterar</string>
    <string name="action_manage">Gerenciar</string>
    <string name="suport_email"><u>groappsuporte@gmail.com</u></string>
    <string name="suport">Suporte</string>
    <string name="company">Empresa</string>
    <string name="departament">Setor</string>
    <string name="ambient">Ambiente</string>
    <string name="function">Função</string>
    <string name="description">Descrição</string>
    <string name="workday">Jornada de trabalho</string>
    <string name="local">Local</string>
    <string name="area">Área (m²)</string>
    <string name="width_area">Largura (m)</string>
    <string name="length_area">Comprimento. (m)</string>
    <string name="height">Pé direito (m)</string>
    <string name="floor">Piso</string>
    <string name="wall">Parede</string>
    <string name="roof">Cobertura</string>
    <string name="roof_tiles">Telhas</string>
    <string name="agent">Agente</string>
    <string name="factor_type">Tipo do fator de risco</string>
    <string name="window">Janela</string>
    <string name="ceiling">Forro</string>
    <string name="structure">Estrutura</string>
    <string name="natural_lighting">Iluminacao Natural</string>
    <string name="artificial_lighting">Iluminacao Artificial</string>
    <string name="natural_ventilation">Ventilação Natural</string>
    <string name="artificial_ventilation">Ventilação Artificial</string>
    <string name="splash">splash</string>
    <string name="email">E-mail</string>
    <string name="cnpj">CNPJ</string>
    <string name="name">Nome</string>
    <string name="password">senha</string>
    <string name="password_confirm">confirmar senha</string>
    <string name="old_password">senha atual</string>
    <string name="new_password">nova senha</string>
    <string name="risk_factor">Fator de risco</string>
    <string name="generating_source">Fonte geradora</string>
    <string name="intensity_concentration">Intensidade e/ou concentração</string>
    <string name="trajectory">Tragetória</string>
    <string name="elimination_neutralization">Eliminação e/ou Neutralização</string>
    <string name="expousure">Modo de exposição</string>
    <string name="source_methodology">Fonte / Metodologia</string>
    <string name="degree_of_risk">Grau de risco</string>
    <string name="action_level">Nível de Ação</string>
    <string name="nr15">NR-15</string>
    <string name="acgih">ACGIH</string>
    <string name="e_social">Previdência</string>
    <string name="not_e_social">Trabalhista</string>
    <string name="calc_area">Calcular Área</string>
    <string name="function_amount">Quantidade de funcionários</string>
    <string name="physical_user">Físico</string>
    <string name="legal_user">Jurídico</string>
    <string name="user_type">Tipo de cadastro</string>
    <string name="access_key">Chave de acesso</string>
    <string name="linked_users">Usuários vinculados</string>
    <string name="payments">Pagamentos</string>
    <string name="puller">puller</string>
    <string name="menu">menu</string>
    <string name="detail">detalhes</string>
    <string name="label_email">E-mail: %s</string>
    <string name="label_local">Local: %s</string>
    <string name="label_area">Área: %s</string>
    <string name="label_height">Pé direito: %s</string>
    <string name="label_floor">Piso: %s</string>
    <string name="label_wall">Parede: %s</string>
    <string name="label_roof">Cobertura: %s</string>
    <string name="label_roof_tiles">Telha: %s</string>
    <string name="label_window">Janela: %s</string>
    <string name="label_ceiling">Forro: %s</string>
    <string name="label_structure">Estrutura: %s</string>
    <string name="label_natural_lighting">Iluminacao Natural: %s</string>
    <string name="label_artificial_lighting">Iluminacao Artificial: %s</string>
    <string name="label_natural_ventilation">Ventilação Natural: %s</string>
    <string name="label_artificial_ventilation">Ventilação Artificial: %s</string>
    <string name="label_work_day">Jornada de trabalho:</string>
    <string name="label_quantity_function">Nº de funcionários:</string>
    <string name="label_risk_factor">Fator de risco: %s</string>
    <string name="label_generating_source">Fonte geradora: %s</string>
    <string name="label_intensity_concentration">Intensidade e/ou concentração: %s</string>
    <string name="label_trajectory">Tragetória: %s</string>
    <string name="label_elimination_neutralization">Eliminação e/ou Neutralização: %s</string>
    <string name="label_expousure">Modo de exposição: %s</string>
    <string name="label_source_methodology">Fonte / Metodologia: %s</string>
    <string name="label_degree_of_risk">Grau de risco: %s</string>
    <string name="label_action_level">Nível de Ação: %s</string>
    <string name="label_nr15">NR15: %s</string>
    <string name="label_acgih">ACGHI: %s</string>
    <string name="label_end">Saída:</string>
    <string name="label_begin">Entrada:</string>
    <string name="label_access_key">Chave de acesso: %s</string>
    <string name="label_report_count">Quantidade de relatórios disponíveis: %s</string>
    <string name="label_billing_value">%s / mês</string>
    <string name="label_developed_activities">Atividades desenvolvidas:</string>
    <string name="sync_complete">Sincronização finalizada</string>
    <string name="sync_failed">Falha na sincronização</string>
    <string name="message_alert">Atenção</string>
    <string name="message_alert_delete">Deseja realmente excluir?</string>
    <string name="message_alert_duplicate">Deseja realmente duplicar?</string>
    <string name="message_alert_payment">Seu pagamento expirou! Avalie os nossos planos de pagamentos e continue utilizando o GRO!</string>
    <string name="message_alert_trial_plan">Seu plano de teste expirou! Avalie os nossos planos de pagamentos e continue utilizando o GRO!</string>
    <string name="message_error_required">Campo obrigatório</string>
    <string name="message_error_no_plan_selected">Nenhum plano selecionado</string>
    <string name="message_error_generic">Erro inesperado</string>
    <string name="message_invalid_email">Email inválido</string>
    <string name="message_select_company_info">Selecione a empresa para gerar o relatório</string>
    <string name="message_send_success">Relatório enviado com sucesso</string>
    <string name="message_email_send_info">Informe o e-mail para enviarmos o relatório</string>
    <string name="message_move_to">Mover para:</string>
    <string name="message_select_dayofweek">Selecione os dias da semana</string>
    <string name="message_select_hour">Selecione o horário de ínicio e fim</string>
    <string name="message_possible_move_empty">Não foi encontrado nenhum %s possível para mover</string>
    <string name="message_not_register">Ainda não possui cadastro? <u>Clique aqui</u></string>
    <string name="message_forgot_password">Esqueceu sua senha? <u>Clique aqui</u></string>
    <string name="message_user_created">Usuário criado com sucesso</string>
    <string name="message_user_updated_password">Senha alterada com sucesso</string>
    <string name="message_user_linked">Usuário vinculado com sucesso</string>
    <string name="message_recorey_password_success">Uma nova senha foi gerada e enviada para o e-mail informado</string>
    <string name="message_valid_email_info">Informe um e-mail válido</string>
    <string name="message_forgot_password_info">Informe o seu e-mail cadastrado para enviarmos uma nova senha</string>
    <string name="message_empty_payments">Oops.. Nenhum pagamento foi encontrado, clique aqui para avaliar os nossos planos e continar utilizando o GRO</string>
    <string name="message_payment_error">Nenhum pagamento encontrado clique aqui para avaliar os nossos planos</string>
    <string name="message_company_user_payment">Seu pagamento está vínculado a uma empresa</string>
    <string name="throwable_session">Usuário está inativo contate nosso suporte</string>
    <string name="throwable_connect">Falha ao conectar com o servidor tente novamente ou contate nosso suporte</string>
    <string name="throwable_generic">Erro inesperado tente novamente ou contate nosso suporte</string>
    <string-array name="piso_array">
        <item>Concreto armado</item>
        <item>Cerâmico</item>
        <item>Porcelanato</item>
        <item>Granitina</item>
    </string-array>
    <string-array name="parede_array">
        <item>Alvenaria</item>
        <item>Telha de zinco</item>
        <item>Telha isotérmica</item>
        <item>Madeira</item>
    </string-array>
    <string-array name="cobertura_array">
        <item>Metálica</item>
        <item>Madeira</item>
        <item>Pré-moldado</item>
    </string-array>
    <string-array name="iluminacao_natural_array">
        <item>Através de portas</item>
        <item>Através de janelas</item>
        <item>Através de portões</item>
        <item>Através de telhas translúcidas</item>
    </string-array>
</resources>